--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,14 @@
   ],
   "routes": [
     {
+      "src": "/styles/(.*)",
+      "dest": "/public/styles/$1"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/public/assets/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "index.js"
     }
